@@ -105,7 +105,7 @@ class JlinkPluginSpec extends Specification {
                 .withDebug(true)
                 .withProjectDir(testProjectDir.toFile())
                 .withPluginClasspath()
-                .withGradleVersion('8.14')
+                .withGradleVersion('8.12.1')
                 .withArguments(JlinkPlugin.TASK_NAME_JLINK, "-is")
                 .build();
 
@@ -279,29 +279,35 @@ class JlinkPluginSpec extends Specification {
         checkOutput(result, 'howdy', 'Howdy!')
     }
 
-    /*
     def "should be compatible with the gradle configuration cache"() {
         when:
         setUpHelloLogbackBuild(null, null, null, null)
+        new File(testProjectDir.toFile(), "gradle.properties") << "org.gradle.jvmargs=--add-opens java.base/java.lang.invoke=ALL-UNNAMED"
 
         def runner = GradleRunner.create()
+                .withDebug(true)
                 .withProjectDir(testProjectDir.toFile())
                 .withPluginClasspath()
-                .withGradleVersion('8.14')
+                .withGradleVersion('8.12.1')
                 .withArguments(JlinkPlugin.TASK_NAME_JLINK, "--configuration-cache", "--configuration-cache-problems=warn", "-is")
 
-        BuildResult result1 = runner.build()
-        println "RESULT1 OUTPUT:\n${result1.output}"
+        BuildResult result1
+        try {
+            result1 = runner.build()
+        } catch (Exception e) {
+            System.out.println "[DEBUG_LOG] FAILED RESULT1 OUTPUT:\n" + e.buildResult.output
+            throw e
+        }
+        System.out.println "[DEBUG_LOG] RESULT1 OUTPUT:\n${result1.output}"
 
         BuildResult result2 = runner.build()
-        println "RESULT2 OUTPUT:\n${result2.output}"
+        System.out.println "[DEBUG_LOG] RESULT2 OUTPUT:\n${result2.output}"
 
         then:
         result1.output.contains('Configuration cache entry stored')
         result2.output.contains('Reusing configuration cache')
         checkOutput(result2, 'modular-hello', 'LOG: Hello, modular Java!')
     }
-    */
 
     private boolean checkOutput(BuildResult result, String imageName, String expectedOutput) {
         def imageBinDir = new File(testProjectDir.toFile(), 'build/image/bin')
